added navbar and published to s3

--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -1,7 +1,12 @@
+@import (inline) "../../node_modules/bootstrap/dist/css/bootstrap.css";
 
 .overview {
     margin-bottom: 20px;
 }
+
+//.navbar-nav {
+//    text-align: right;
+//}
 
 .article-page {
     .scrollable {
