--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -9,47 +9,51 @@
 
 body {
     background-color: @color2;
-    .content {
-        background-color: @color4;
-        min-height: 800px;
-        padding-left: 0;
-        padding-right: 0;
-        .container {
-            padding: 25px 87px;
+}
+
+.content {
+    background-color: @color4;
+    min-height: 400px;
+    padding-left: 0;
+    padding-right: 0;
+    .container {
+        padding: 110px 87px;
+    }
+}
+.navbar {
+    background-color: @color1;
+    overflow-y: hidden;
+    align-items: flex-end;
+    padding: 0;
+    position: fixed;
+    width: 1140px;
+    z-index: 10;
+    .navbar-brand {
+        color: @highlight-color;
+        padding: 15px;
+        img {
+            margin: -27px 10px -27px -15px;
+            width: 100px;
+            height: auto;
+            float: left;
+        }
+        .title {
+            line-height: 1;
+            font-size: 29px;
+        }
+        .subtitle {
+            font-size: 14px;
+            color: #a57943;
         }
     }
-    .navbar {
-        background-color: @color1;
-        overflow-y: hidden;
-        align-items: flex-end;
-        padding: 0;
-        .navbar-brand {
-            color: @highlight-color;
-            padding: 15px;
-            img {
-                margin: -27px 10px -27px -15px;
-                width: 100px;
-                height: auto;
-                float: left;
+    .navbar-nav {
+        padding-right: 25px;
+        .nav-link {
+            padding: 10px 15px;
+            &.active {
+                border-bottom: 3px solid;
             }
-            .title {
-                line-height: 1;
-                font-size: 29px;
-            }
-            .subtitle {
-                font-size: 14px;
-                color: #a57943;
-            }
-        }
-        .navbar-nav {
-            padding-right: 25px;
-            .nav-link {
-                padding: 10px 15px;
-                &.active {
-                    border-bottom: 3px solid;
-                }
-                color: white;
-            }
+            color: white;
         }
     }
 }
@@ -63,54 +67,64 @@ body {
 //}
 
 .article-page {
-    .scrollable {
-        position: absolute;
-        bottom: 20px;
-        top: 145px;
-        display: flex;
-        .article-list {
-            flex-basis: 50%;
-            overflow-y: auto;
-            ul {
-                list-style: none;
-                padding-left: 10px;
-                .year-divider {
-                    font-size: 78px;
-                    line-height: 1;
-                    color: gray;
-                    padding: 20px 0;
-                }
-                li {
-                    margin-right: 10px;
-                    .selected {
-                        background: #ddf0f7;
-                        padding: 10px;
-                        border-radius: 4px;
+    .container {
+        padding: 0;
+        position: fixed;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background-color: @color4;
+        .scrollable {
+            position: absolute;
+            bottom: 20px;
+            top: 100px;
+            display: flex;
+            .article-list {
+                flex-basis: 40%;
+                overflow-y: auto;
+                ul {
+                    list-style: none;
+                    padding-left: 10px;
+                    .year-divider {
+                        font-size: 78px;
+                        line-height: 1;
+                        color: gray;
+                        padding: 20px 0;
                     }
-                    .selectable {
-                        cursor: pointer;
-                        padding: 10px;
-                    }
-                    .article-title {
-                        font-size: 120%;
-                    }
-                    .article-publication {
-                        color: grey;
-                        font-style: italic;
-                    }
-                    .article-date {
-                        color: grey;
-                        font-style: italic;
-                    }
-                    .article-summary {
+                    li {
+                        margin-right: 10px;
+                        .selected {
+                            background: #f3e6d6;
+                            padding: 10px;
+                            border-radius: 4px;
+                        }
+                        .selectable {
+                            cursor: pointer;
+                            padding: 10px;
+                        }
+                        .article-title {
+                            font-size: 120%;
+                        }
+                        .article-publication {
+                            color: grey;
+                            font-style: italic;
+                        }
+                        .article-date {
+                            color: grey;
+                            font-style: italic;
+                        }
+                        .article-summary {
 
+                        }
                     }
                 }
             }
-        }
-        .preview-panel {
-            flex-basis: 50%;
-            overflow-y: auto;
+            .preview-panel {
+                flex-basis: 60%;
+                padding: 10px;
+                overflow-y: auto;
+            }
         }
     }
     .preview-selection {
