--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -1,4 +1,5 @@
 @import (inline) "../../node_modules/bootstrap/dist/css/bootstrap.css";
+@import url('https://fonts.googleapis.com/css?family=Marcellus');
 
 @color1: #D9CAB6;
 @color2: #99805F;
@@ -10,6 +11,7 @@
 
 body {
     background-color: @color2;
+    font-family: 'Marcellus', serif;
 }
 
 .content {
@@ -25,7 +27,6 @@ body {
 .drop-cap:first-letter {
     color: @red-highlight;
     float: left;
-    font-family: Georgia, serif;
     font-size: 75px;
     line-height: 60px;
     padding-top: 4px;
