--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -183,3 +183,14 @@ body {
         width: 300px;
     }
 }
+
+.record {
+    table {
+        td {
+            padding: 1px 10px;
+        }
+        .result {
+            text-align: center;
+        }
+    }
+}
