--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -186,11 +186,39 @@ body {
 
 .record {
     table {
+        tr.outer {
+            border-bottom: 1px solid #dacab6;
+            &:nth-child(odd) {
+                background-color: #f3ebe1;
+            }
+        }
+        tr.planned-only {
+            color: #b9b9b9;
+            td.planned-only {
+                color: black;
+            }
+        }
         td {
             padding: 1px 10px;
+            vertical-align: top;
+            ul {
+                list-style: none;
+                padding-left: 0;
+                margin-bottom: 0;
+            }
+        }
+        .date {
+            vertical-align: top;
+            width: 120px;
         }
         .result {
             text-align: center;
+            max-width: 70px;
+        }
+        .opponent {
+            vertical-align: top;
+            max-width: 150px;
+            min-width: 135px;
         }
     }
 }
