--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -47,8 +47,9 @@ body {
     }
     .navbar-brand {
         color: @highlight-color;
-        padding: 15px 0 0x 15px;
+        padding: 15px 0 0 15px;
         margin-right: 0;
+        min-height: 65px;
         img {
             margin: -27px 10px -27px -15px;
             width: 90px;
