--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -404,4 +404,20 @@ body {
     .biography .foot-note {
         width: 100%;
     }
+    .biography {
+        .pull-left {
+            float: none;
+            margin: 20px auto;
+            text-align: center;
+        }
+        .pull-right {
+            float: none;
+            margin: 20px auto;
+            text-align: center;
+        }
+        .inline {
+            float: none;
+            margin: 20px auto;
+        }
+    }
 }
