added text for some articles

--- a/src/index.less
+++ b/src/index.less
@@ -88,6 +88,17 @@ body {
   //}
 
 .article-page {
+    .article-text {
+        h1 {
+            font-size: 150%;
+        }
+        h2 {
+            font-size: 140%;
+        }
+        h3 {
+            font-size: 120%;
+        }
+    }
     .container {
         padding: 0;
         position: fixed;
