formatting changes for the articles page

--- a/src/index.less
+++ b/src/index.less
@@ -161,6 +161,7 @@ body {
                     bottom: 12px;
                     top: 140px;
                     max-width: 660px;
+                    padding-top: 20px;
                 }
             }
         }
@@ -171,6 +172,7 @@ body {
             margin: 0px;
             padding: 5px 18px;
             color: #98805f;
+            text-decoration: none;
             &.selected {
                 background: #997f5f;
                 color: white;
