--- a/src/index.less
+++ b/src/index.less
@@ -1,21 +1,28 @@
 @import (inline) "../node_modules/bootstrap/dist/css/bootstrap.css";
 @import url('https://fonts.googleapis.com/css?family=Marcellus');
 
-@color1: #D9CAB6;
-@color2: #99805F;
-@color3: #B7A388;
-@color4: #FFF6EA;
-@color5: #D9CAB6;
-@highlight-color: #734d2a;
-@red-highlight: #903;
+@headerColor: #D9CAB6; // header
+@pageBackground: #99805F; // background
+@contentBackground: #FFF6EA; // background of content
+@navbarText: #734d2a; // title text
+@highlightColor: #734d2a; // title text
+@dropCapColor: #903; // drop caps
+@subtitle: #a57943;
+@sourceAndDateColor: grey;
+@photoBorder: #997f5f;
+@linkHighlightColor: #997f5f;
+@articleSelectionColor: #997f5f;
+@articleSelectionText: #98805f;
+@articleSelectionTextSelected: white;
+@sectionHeaders: gray;
 
 body {
-    background-color: @color2;
+    background-color: @pageBackground;
     font-family: 'Marcellus', serif;
 }
 
 .content {
-    background-color: @color4;
+    background-color: @contentBackground;
     min-height: 400px;
     padding-left: 0;
     padding-right: 0;
@@ -25,7 +32,7 @@ body {
 }
 
 .drop-cap:first-letter {
-    color: @red-highlight;
+    color: @dropCapColor;
     float: left;
     font-size: 75px;
     line-height: 60px;
@@ -35,7 +42,7 @@ body {
 }
 
 .navbar {
-    background-color: @color1;
+    background-color: @headerColor;
     overflow-y: hidden;
     align-items: flex-end;
     padding: 0;
@@ -47,7 +54,7 @@ body {
         padding: 0;
     }
     .navbar-brand {
-        color: @highlight-color;
+        color: @navbarText;
         padding: 15px 0 0 15px;
         margin-right: 0;
         min-height: 65px;
@@ -64,7 +71,7 @@ body {
         }
         .subtitle {
             font-size: 14px;
-            color: #a57943;
+            color: @subtitle;
         }
     }
     .navbar-nav {
@@ -72,9 +79,9 @@ body {
         .nav-link {
             padding: 10px 15px;
             &.active {
-                border-bottom: 3px solid @red-highlight;
+                border-bottom: 3px solid @dropCapColor;
             }
-            color: white;
+            color: @navbarText;
         }
     }
 }
@@ -82,10 +89,6 @@ body {
 .overview {
     margin-bottom: 20px;
 }
-
-//.navbar-nav {
-  //    text-align: right;
-  //}
 
 .article-page {
     .article-text {
@@ -106,7 +109,7 @@ body {
         right: 0;
         top: 0;
         bottom: 0;
-        background-color: @color4;
+        background-color: @contentBackground;
         .scrollable {
             position: absolute;
             bottom: 20px;
@@ -121,7 +124,7 @@ body {
                     .year-divider {
                         font-size: 78px;
                         line-height: 1;
-                        color: gray;
+                        color: @sourceAndDateColor;
                         padding: 20px 0;
                     }
                     li {
@@ -139,11 +142,11 @@ body {
                             font-size: 120%;
                         }
                         .article-publication {
-                            color: grey;
+                            color: @sourceAndDateColor;
                             font-style: italic;
                         }
                         .article-date {
-                            color: grey;
+                            color: @sourceAndDateColor;
                             font-style: italic;
                         }
                         .article-summary {
@@ -171,11 +174,11 @@ body {
         a {
             margin: 0px;
             padding: 5px 18px;
-            color: #98805f;
+            color: @articleSelectionText;
             text-decoration: none;
             &.selected {
-                background: #997f5f;
-                color: white;
+                background: @articleSelectionColor;
+                color: @articleSelectionTextSelected;
                 border-radius: 3px;
             }
         }
@@ -188,7 +191,7 @@ body {
 .about {
     img {
         float: right;
-        border: 5px double #997f5f;
+        border: 5px double @photoBorder;
         margin-left: 35px;
         width: 300px;
     }
@@ -198,7 +201,7 @@ body {
     min-height: 600px;
     img {
         float: left;
-        border: 5px double #997f5f;
+        border: 5px double @photoBorder;
         margin-right: 35px;
         width: 300px;
     }
@@ -252,7 +255,7 @@ body {
     .captioned-image {
         display: table;
         img {
-            border: 5px double #997f5f;
+            border: 5px double @photoBorder;
         }
         .caption {
             display: table-caption;
@@ -265,7 +268,7 @@ body {
     .reference {
         cursor: pointer;
         &:hover {
-            color: #997f5f;
+            color: @linkHighlightColor;
         }
         .superscript {
             font-variant: small-caps;
@@ -295,7 +298,7 @@ body {
         }
         .article-publication {
             margin-left: 5px;
-            color: grey;
+            color: @sourceAndDateColor;
             font-style: italic;
         }
         .close {
@@ -307,7 +310,7 @@ body {
     h2 {
         text-align: center;
         font-variant: all-small-caps;
-        color: gray;
+        color: @sectionHeaders;
         font-size: 18pt;
     }
 
@@ -381,7 +384,7 @@ body {
         max-width: 1140px;
     }
     .navbar {
-        max-width: 1140px;
+        //max-width: 1140px;
     }
 }
 
