--- a/src/index.less
+++ b/src/index.less
@@ -1,9 +1,9 @@
 @import (inline) "../node_modules/bootstrap/dist/css/bootstrap.css";
 @import url('https://fonts.googleapis.com/css?family=Marcellus');
 
-@headerColor: #D9CAB6; // header
-@pageBackground: #99805F; // background
-@contentBackground: #FFF6EA; // background of content
+@headerColor: #D9CAB6;
+@pageBackground: #FFF6EA;
+@contentBackground: #FFF6EA;
 @navbarText: #734d2a; // title text
 @highlightColor: #734d2a; // title text
 @dropCapColor: #903; // drop caps
@@ -14,7 +14,7 @@
 @articleSelectionColor: #997f5f;
 @articleSelectionText: #98805f;
 @articleSelectionTextSelected: white;
-@sectionHeaders: gray;
+@sectionHeaders: @dropCapColor;
 
 body {
     background-color: @pageBackground;
