--- a/src/index.less
+++ b/src/index.less
@@ -160,12 +160,13 @@ body {
                 flex-basis: 60%;
                 padding: 10px;
                 .scrollable-preview {
+                    border: 2px solid #997f5f;
+                    border-radius: 7px;
                     overflow-y: auto;
                     position: fixed;
                     bottom: 12px;
                     top: 140px;
                     max-width: 660px;
-                    padding-top: 20px;
                 }
             }
         }
@@ -457,5 +458,22 @@ body {
         &:hover {
             color: @highlightColor;
         }
+    }
+}
+
+.full-screen-image-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1000;
+    .scrollable-preview {
+        overflow: auto;
+        position: fixed;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
     }
 }
