--- a/src/index.less
+++ b/src/index.less
@@ -1,6 +1,6 @@
 @import (inline) "../node_modules/bootstrap/dist/css/bootstrap.css";
+@import (inline) '@fortawesome/fontawesome-free/css/all.min.css';
 @import url('https://fonts.googleapis.com/css?family=Marcellus');
-@import '@fortawesome/fontawesome-free/css/all.min.css';
 
 @headerColor: #D9CAB6;
 @pageBackground: #FFF6EA;
