--- a/src/index.less
+++ b/src/index.less
@@ -1,10 +1,10 @@
 @import (inline) "../node_modules/bootstrap/dist/css/bootstrap.css";
-@import (inline) '@fortawesome/fontawesome-free/css/all.min.css';
-@import url('https://fonts.googleapis.com/css?family=Marcellus');
+@import (inline) "@fortawesome/fontawesome-free/css/all.min.css";
+@import url("https://fonts.googleapis.com/css?family=Marcellus");
 
-@headerColor: #D9CAB6;
-@pageBackground: #FFF6EA;
-@contentBackground: #FFF6EA;
+@headerColor: #d9cab6;
+@pageBackground: #fff6ea;
+@contentBackground: #fff6ea;
 @navbarText: #734d2a; // title text
 @highlightColor: #734d2a; // title text
 @dropCapColor: #903; // drop caps
@@ -18,462 +18,463 @@
 @sectionHeaders: @dropCapColor;
 
 body {
-    background-color: @pageBackground;
-    font-family: 'Marcellus', serif;
+  background-color: @pageBackground;
+  font-family: "Marcellus", serif;
 }
 
 .content {
-    background-color: @contentBackground;
-    min-height: 400px;
-    padding-left: 0;
-    padding-right: 0;
-    .container {
-        padding: 110px 87px;
-    }
+  background-color: @contentBackground;
+  min-height: 400px;
+  padding-left: 0;
+  padding-right: 0;
+  .container {
+    padding: 110px 87px;
+  }
 }
 
 .drop-cap:first-letter {
-    color: @dropCapColor;
-    float: left;
-    font-size: 75px;
-    line-height: 60px;
-    padding-top: 4px;
-    padding-right: 8px;
-    padding-left: 3px;
+  color: @dropCapColor;
+  float: left;
+  font-size: 75px;
+  line-height: 60px;
+  padding-top: 4px;
+  padding-right: 8px;
+  padding-left: 3px;
 }
 
 .navbar {
-    background-color: @headerColor;
-    overflow-y: hidden;
-    align-items: flex-end;
+  background-color: @headerColor;
+  overflow-y: hidden;
+  align-items: flex-end;
+  padding: 0;
+  position: fixed;
+  width: 1140px;
+  z-index: 10;
+  justify-content: space-between;
+  .mr-auto {
     padding: 0;
-    position: fixed;
-    width: 1140px;
-    z-index: 10;
-    justify-content: space-between;
-    .mr-auto {
-        padding: 0;
+  }
+  .navbar-brand {
+    color: @navbarText;
+    padding: 15px 0 0 15px;
+    margin-right: 0;
+    min-height: 65px;
+    img {
+      margin: -27px 10px -27px -15px;
+      width: 90px;
+      height: 90px;
+      float: left;
+      max-width: none;
     }
-    .navbar-brand {
-        color: @navbarText;
-        padding: 15px 0 0 15px;
-        margin-right: 0;
-        min-height: 65px;
-        img {
-            margin: -27px 10px -27px -15px;
-            width: 90px;
-            height: 90px;
-            float: left;
-            max-width: none;
-        }
-        .title {
-            line-height: 1;
-            font-size: 29px;
-        }
-        .subtitle {
-            font-size: 14px;
-            color: @subtitle;
-        }
+    .title {
+      line-height: 1;
+      font-size: 29px;
     }
-    .navbar-nav {
-        padding-right: 25px;
-        .nav-link {
-            padding: 10px 15px;
-            &.active {
-                border-bottom: 3px solid @dropCapColor;
-            }
-            color: @navbarText;
-        }
+    .subtitle {
+      font-size: 14px;
+      color: @subtitle;
     }
+  }
+  .navbar-nav {
+    padding-right: 25px;
+    .nav-link {
+      padding: 10px 15px;
+      &.active {
+        border-bottom: 3px solid @dropCapColor;
+      }
+      color: @navbarText;
+    }
+  }
 }
 
 .overview {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .article-page {
-    .article-text {
-        h1 {
-            font-size: 150%;
-        }
-        h2 {
-            font-size: 140%;
-        }
-        h3 {
-            font-size: 120%;
-        }
+  .article-text {
+    h1 {
+      font-size: 150%;
     }
-    .container {
-        padding: 0;
-        position: fixed;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        background-color: @contentBackground;
-        .scrollable {
-            position: absolute;
-            bottom: 20px;
-            top: 100px;
-            display: flex;
-            .article-list {
-                flex-basis: 40%;
-                overflow-y: auto;
-                ul {
-                    list-style: none;
-                    padding-left: 10px;
-                    .year-divider {
-                        font-size: 78px;
-                        line-height: 1;
-                        color: @sourceAndDateColor;
-                        padding: 20px 0;
-                    }
-                    li {
-                        margin-right: 10px;
-                        .selected {
-                            background: #f3e6d6;
-                            padding: 10px;
-                            border-radius: 4px;
-                        }
-                        .selectable {
-                            cursor: pointer;
-                            padding: 10px;
-                        }
-                        .article-title {
-                            font-size: 120%;
-                        }
-                        .article-publication {
-                            color: @sourceAndDateColor;
-                            font-style: italic;
-                        }
-                        .article-date {
-                            color: @sourceAndDateColor;
-                            font-style: italic;
-                        }
-                        .article-summary {
-
-                        }
-                    }
-                }
+    h2 {
+      font-size: 140%;
+    }
+    h3 {
+      font-size: 120%;
+    }
+  }
+  .container {
+    padding: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: @contentBackground;
+    .scrollable {
+      position: absolute;
+      bottom: 20px;
+      top: 100px;
+      display: flex;
+      .article-list {
+        flex-basis: 40%;
+        overflow-y: auto;
+        ul {
+          list-style: none;
+          padding-left: 10px;
+          .year-divider {
+            font-size: 78px;
+            line-height: 1;
+            color: @sourceAndDateColor;
+            padding: 20px 0;
+          }
+          li {
+            margin-right: 10px;
+            .selected {
+              background: #f3e6d6;
+              padding: 10px;
+              border-radius: 4px;
             }
-            .preview-panel {
-                flex-basis: 60%;
-                padding: 10px;
-                .scrollable-preview {
-                    border: 2px solid #997f5f;
-                    border-radius: 7px;
-                    overflow-y: auto;
-                    position: fixed;
-                    bottom: 12px;
-                    top: 140px;
-                    max-width: 660px;
-                }
+            .selectable {
+              cursor: pointer;
+              padding: 10px;
             }
-        }
-    }
-    .preview-selection {
-        text-align: center;
-        a {
-            margin: 0px;
-            padding: 5px 18px;
-            color: @articleSelectionText;
-            text-decoration: none;
-            &.selected {
-                background: @articleSelectionColor;
-                color: @articleSelectionTextSelected;
-                border-radius: 3px;
+            .article-title {
+              font-size: 120%;
             }
+            .article-publication {
+              color: @sourceAndDateColor;
+              font-style: italic;
+            }
+            .article-date {
+              color: @sourceAndDateColor;
+              font-style: italic;
+            }
+            .article-summary {
+            }
+          }
         }
+      }
+      .preview-panel {
+        flex-basis: 60%;
+        padding: 10px;
+        .scrollable-preview {
+          border: 2px solid #997f5f;
+          border-radius: 7px;
+          overflow-y: auto;
+          position: fixed;
+          bottom: 12px;
+          top: 140px;
+          max-width: 660px;
+        }
+      }
     }
-    .preview-image {
-        width: 100%;
+  }
+  .preview-selection {
+    text-align: center;
+    a {
+      margin: 0px;
+      padding: 5px 18px;
+      color: @articleSelectionText;
+      text-decoration: none;
+      &.selected {
+        background: @articleSelectionColor;
+        color: @articleSelectionTextSelected;
+        border-radius: 3px;
+      }
     }
+  }
+  .preview-image {
+    width: 100%;
+  }
 }
 
 .about {
-    img {
-        float: right;
-        border: 5px double @photoBorder;
-        margin-left: 35px;
-        width: 300px;
-    }
+  img {
+    float: right;
+    border: 5px double @photoBorder;
+    margin-left: 35px;
+    width: 300px;
+  }
 }
 
 .home {
-    min-height: 600px;
-    img {
-        float: left;
-        border: 5px double @photoBorder;
-        margin-right: 35px;
-        width: 300px;
-    }
+  min-height: 600px;
+  img {
+    float: left;
+    border: 5px double @photoBorder;
+    margin-right: 35px;
+    width: 300px;
+  }
 }
 
 .record {
-    table {
-        tr.outer {
-            border-bottom: 1px solid #dacab6;
-            &:nth-child(odd) {
-                background-color: #f3ebe1;
-            }
-        }
-        tr.planned-only, tr.questionable {
-            color: #b9b9b9;
-            td.planned-only, td.questionable {
-                color: #90897f;
-                position: absolute;
-                margin-top: 53px;
-                margin-left: -40px;
-                font-size: 150%;
-                transform: rotate(-20deg);
-            }
-        }
-        td {
-            padding: 1px 10px;
-            vertical-align: top;
-            ul {
-                list-style: none;
-                padding-left: 0;
-                margin-bottom: 0;
-            }
-        }
-        .date {
-            vertical-align: top;
-            width: 120px;
-        }
-        .result {
-            text-align: center;
-            max-width: 70px;
-        }
-        .opponent {
-            vertical-align: top;
-            max-width: 150px;
-            min-width: 135px;
-        }
+  table {
+    tr.outer {
+      border-bottom: 1px solid #dacab6;
+      &:nth-child(odd) {
+        background-color: #f3ebe1;
+      }
     }
+    tr.planned-only,
+    tr.questionable {
+      color: #b9b9b9;
+      td.planned-only,
+      td.questionable {
+        color: #90897f;
+        position: absolute;
+        margin-top: 53px;
+        margin-left: -40px;
+        font-size: 150%;
+        transform: rotate(-20deg);
+      }
+    }
+    td {
+      padding: 1px 10px;
+      vertical-align: top;
+      ul {
+        list-style: none;
+        padding-left: 0;
+        margin-bottom: 0;
+      }
+    }
+    .date {
+      vertical-align: top;
+      width: 120px;
+    }
+    .result {
+      text-align: center;
+      max-width: 70px;
+    }
+    .opponent {
+      vertical-align: top;
+      max-width: 150px;
+      min-width: 135px;
+    }
+  }
 }
 
 .biography {
-    .captioned-image {
-        display: table;
-        img {
-            border: 5px double @photoBorder;
-        }
-        .caption {
-            display: table-caption;
-            caption-side: bottom;
-            text-align: center;
-            font-size: 80%;
-            margin-top: 8px;
-        }
+  .captioned-image {
+    display: table;
+    img {
+      border: 5px double @photoBorder;
     }
-    .reference {
-        cursor: pointer;
-        &:hover {
-            color: @linkHighlightColor;
-        }
-        .superscript {
-            font-variant: small-caps;
-            vertical-align: super;
-            margin-left: 2px;
-            line-height: 0.5;
-        }
+    .caption {
+      display: table-caption;
+      caption-side: bottom;
+      text-align: center;
+      font-size: 80%;
+      margin-top: 8px;
     }
+  }
+  .reference {
+    cursor: pointer;
+    &:hover {
+      color: @linkHighlightColor;
+    }
+    .superscript {
+      font-variant: small-caps;
+      vertical-align: super;
+      margin-left: 2px;
+      line-height: 0.5;
+    }
+  }
 
-    .foot-note {
-        position: fixed;
-        bottom: 0;
-        background: white;
-        width: 1000px;
-        margin: 0 auto;
-        left: 0;
-        right: 0;
-        padding: 12px 25px 0;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-        border: 1px solid #716556;
-        border-bottom: none;
-        max-height: 300px;
-        overflow-y: auto;
-        .fact {
-            font-style: italic;
-        }
-        .article-publication {
-            margin-left: 5px;
-            color: @sourceAndDateColor;
-            font-style: italic;
-        }
-        .close {
-            font-family: sans-serif;
-            font-size: 15pt;
-        }
+  .foot-note {
+    position: fixed;
+    bottom: 0;
+    background: white;
+    width: 1000px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    padding: 12px 25px 0;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border: 1px solid #716556;
+    border-bottom: none;
+    max-height: 300px;
+    overflow-y: auto;
+    .fact {
+      font-style: italic;
     }
-
-    h2 {
-        text-align: center;
-        font-variant: all-small-caps;
-        color: @sectionHeaders;
-        font-size: 18pt;
+    .article-publication {
+      margin-left: 5px;
+      color: @sourceAndDateColor;
+      font-style: italic;
     }
-
-    .quote {
-        display: block;
-        font-style: italic;
-        margin: 10px 20px;
-        .attribution {
-            display: block;
-            .speaker {
-                margin-left: 40px;
-            }
-            .quote-source {
-                margin-left: 5px;
-                font-size: 80%;
-            }
-        }
+    .close {
+      font-family: sans-serif;
+      font-size: 15pt;
     }
+  }
 
-    .misc-photos {
-        margin-top: 50px;
-    }
+  h2 {
+    text-align: center;
+    font-variant: all-small-caps;
+    color: @sectionHeaders;
+    font-size: 18pt;
+  }
 
-    .pull-right {
-        float: right;
+  .quote {
+    display: block;
+    font-style: italic;
+    margin: 10px 20px;
+    .attribution {
+      display: block;
+      .speaker {
         margin-left: 40px;
+      }
+      .quote-source {
+        margin-left: 5px;
+        font-size: 80%;
+      }
     }
+  }
 
-    .pull-left {
-        float: left;
-        margin-right: 40px;
-    }
+  .misc-photos {
+    margin-top: 50px;
+  }
 
-    .inline {
-        display: inline-table;
-        margin: 0 20px 50px;
-    }
+  .pull-right {
+    float: right;
+    margin-left: 40px;
+  }
 
-    .misc-photos {
-        text-align: center;
-    }
+  .pull-left {
+    float: left;
+    margin-right: 40px;
+  }
+
+  .inline {
+    display: inline-table;
+    margin: 0 20px 50px;
+  }
+
+  .misc-photos {
+    text-align: center;
+  }
 }
 
 @media (min-width: 576px) {
-    .container {
-        max-width: 100%;
-    }
-    .navbar {
-        max-width: 100%;
-    }
+  .container {
+    max-width: 100%;
+  }
+  .navbar {
+    max-width: 100%;
+  }
 }
 
 @media (min-width: 768px) {
-    .container {
-        max-width: 100%;
-    }
-    .navbar {
-        max-width: 100%;
-    }
+  .container {
+    max-width: 100%;
+  }
+  .navbar {
+    max-width: 100%;
+  }
 }
 
 @media (min-width: 992px) {
-    .navbar {
-        width: 100%;
-        max-width: 100%;
-    }
+  .navbar {
+    width: 100%;
+    max-width: 100%;
+  }
 }
 
 @media (min-width: 1200px) {
-    .container {
-        max-width: 1140px;
-    }
-    .navbar {
-        //max-width: 1140px;
-    }
+  .container {
+    max-width: 1140px;
+  }
+  .navbar {
+    //max-width: 1140px;
+  }
 }
 
 @media (max-width: 750px) {
-    .content {
-        .container {
-            padding: 110px 10px;
-            max-width: 100%;
-        }
+  .content {
+    .container {
+      padding: 110px 10px;
+      max-width: 100%;
     }
-    img {
-        max-width: 90%;
+  }
+  img {
+    max-width: 90%;
+  }
+  .navbar {
+    width: 100%;
+    flex-flow: row nowrap;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    .title {
+      display: none;
     }
-    .navbar {
-        width: 100%;
-        flex-flow: row nowrap;
-        -ms-flex-pack: start;
-        justify-content: flex-start;
-        .title {
-            display: none;
-        }
-        .subtitle {
-            display: none;
-        }
-        .navbar-nav {
-            font-size: 68%;
-            flex-direction: row;
-        }
+    .subtitle {
+      display: none;
     }
-    table {
-        overflow: auto;
-        display: block;
+    .navbar-nav {
+      font-size: 68%;
+      flex-direction: row;
     }
-    .biography .foot-note {
-        width: 100%;
+  }
+  table {
+    overflow: auto;
+    display: block;
+  }
+  .biography .foot-note {
+    width: 100%;
+  }
+  .biography {
+    .pull-left {
+      float: none;
+      margin: 20px auto;
+      text-align: center;
     }
-    .biography {
-        .pull-left {
-            float: none;
-            margin: 20px auto;
-            text-align: center;
-        }
-        .pull-right {
-            float: none;
-            margin: 20px auto;
-            text-align: center;
-        }
-        .inline {
-            float: none;
-            margin: 20px auto;
-        }
+    .pull-right {
+      float: none;
+      margin: 20px auto;
+      text-align: center;
     }
+    .inline {
+      float: none;
+      margin: 20px auto;
+    }
+  }
 }
 
 .zoom-controls {
-    background: white;
-    position: absolute;
-    top: 50px;
-    left: 20px;
+  background: white;
+  position: absolute;
+  top: 50px;
+  left: 20px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #716556;
+  z-index: 100;
+  .fa-solid {
+    font-size: 150%;
+    color: @navbarText;
     padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #716556;
-    z-index: 100;
-    .fa-solid {
-        font-size: 150%;
-        color: @navbarText;
-        padding: 10px;
-        cursor: pointer;
-        &:hover {
-            color: @highlightColor;
-        }
+    cursor: pointer;
+    &:hover {
+      color: @highlightColor;
     }
+  }
 }
 
 .full-screen-image-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1000;
+  .scrollable-preview {
+    overflow: auto;
     position: fixed;
-    top: 0;
     left: 0;
     right: 0;
+    top: 0;
     bottom: 0;
-    z-index: 1000;
-    .scrollable-preview {
-        overflow: auto;
-        position: fixed;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-    }
+  }
 }
